kubernetes/nginx-deployment-k8s/src/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-pv-volume
          mountPath: /data/nginx
      volumes:
      - name: nginx-pv-volume
        persistentVolumeClaim:
          claimName: nginx-pvc
